ZON-1915: fix whitespace

--- a/sass/web.site/modules/_adplaces.sass
+++ b/sass/web.site/modules/_adplaces.sass
@@ -45,6 +45,7 @@
 	// and positioning of adlabel
 	&--tile_5-on-article
 		display: table
+		margin: remify(60px 0 28px 0)
 		vertical-align: middle
 		width: 100%
 		// hide original label cause we cannot position it
